--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee
-spring.datasource.username=root
-spring.datasource.password=root3d@@
+spring.datasource.username=#username
+spring.datasource.password=#password
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
